# nuitka_actions_sample

./: ReadMe.md  pyproject.toml  requirements.txt
.github/workflows/: nuitka_actions_demo.yml  nuitka_actions_read_only_file.yml  nuitka_actions_using_library_from_pip.yml  nuitka_actions_using_library_from_pyproject.yml  nuitka_poetry.yaml  test_read_external_image.yaml  test_read_only_file.yaml  test_set_company_product_name.yaml  test_standalone.yaml  test_using_library_from_pip.yaml  test_using_library_from_pyproject.yaml
src/: nuitka_on_poetry.py  using_library_from_pyproject.py
test/: read_external_image.py  using_library_from_pip.py
