[tool.poetry]
name = "nuitka-actions-sample"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pyglet = "^2.0.5"
opencv-python = "^4.7.0.72"
mediapipe = "^0.10.3"
pillow = "^10.0.0"
tomli = "^2.0.1"


[tool.poetry.group.dev.dependencies]
nuitka = "^2.5.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
